src/resources/postcss/tribe-common-admin.pcss
/* ... */
.tribe-events-admin-kb-card__links li {
	margin: 0;
}

.tribe-events-admin-kb-card__links li a {
	font-size: 14px;
	text-decoration: none;
	line-height: 1.86;
	color: #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
	}
}

.tribe-events-admin-section-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 50px 0 0;

	@media screen and (max-width: 480px) {
		margin: 0;
	}
}

.tribe-events-admin-section-header h3 {
	font-size: 28px;
	line-height: 1;
	font-weight: bold;
	color: #0f1031;
}

.tribe-events-admin-section-header a {
	font-size: 14px;
	text-decoration: none;
	color: #334aff;
	padding-bottom: 2px;
    border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

/* faq section */

.tribe-events-admin-faq {
	margin: 10px 0 0;
}

.tribe-events-admin-faq-card {
	padding: 24px 15px 19px 19px;
	border: 1px solid #e1e1e4;
	border-radius: 20px;
	display: flex;
	justify-content: space-between;
}

.tribe-events-admin-faq-card a {
	color: #0f1031;
	
	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
	}
}

.tribe-events-admin-faq-card__icon img {
	width: 16px;
	height: 22px;
}

.tribe-events-admin-faq-card__content {
	margin-left: 10px;
}

.tribe-events-admin-faq__question {
	font-size: 16px;
	color: #334aff;
	text-decoration: none;
}

.tribe-events-admin-faq__answer {
	font-size: 13px;
	color: #0f1031;
	margin-top: 18px;
}

.tribe-events-admin-extensions-title {
	font-size: 16px;
	line-height: 1.5;
	color: #0f1031;
	max-width: 70%;
	margin: 0 0 30px;

	@media screen and (max-width: 768px) {
		max-width: 100%;
	}

	@media screen and (max-width: 480px) {
		max-width: 100%;
	}
}

.tribe-events-admin-extensions {
	margin: 10px 0 0;
}

.tribe-events-admin-extensions-card {
	padding: 48px 35px 24px 25px;
	border: 1px solid #e1e1e4;
	border-top: 8px solid #334aff;
	border-radius: 20px;
}

.tribe-events-admin-extensions-card__title a {
	font-family: Helvetica;
	font-size: 20px;
	font-weight: bold;
	line-height: 1.2;
	color: #0f1031;
	text-decoration: none;
}

.tribe-events-admin-extensions-card__description {
	font-family: Helvetica;
	font-size: 14px;
	line-height: 1.43;
	color: #0f1031;
	margin: 20px 0;
}

.tribe-events-admin-cta {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 60px 0;
	border: 1px solid #e1e1e4;
	border-radius: 20px;

	@media screen and (max-width: 480px) {
		flex-direction: column;
		align-items: flex-start;
	}
}

.tribe-events-admin-cta__image {
	width: auto;
	height: 152px;
	object-fit: contain;

	@media screen and (max-width: 480px) {
		width: 90%;
		height: auto;
	}
}

.tribe-events-admin-cta__content {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	@media screen and (max-width: 480px) {
		padding: 32px 23px 45px;
		align-items: flex-start;
	}
}

.tribe-events-admin__troubleshooting-cta {
	align-items: flex-start;
	margin-left: 140px;

	@media screen and (max-width: 768px) {
		margin-left: 20px;
	}
	
	@media screen and (max-width: 480px) {
		margin-left: 0;
	}
}

.tribe-events-admin-cta__content-title {
	font-size: 28px;
	font-weight: bold;
	color: #0f1031;
	line-height: normal;
	margin-bottom: 10px;

	@media screen and (max-width: 480px) {
		font-size: 23px;
	}
}

.tribe-events-admin-cta__content-subtitle {
	font-size: 16px;
	line-height: 1.5;
	color: #0f1031;
	margin-bottom: 10px;
}

.tribe-events-admin-cta__content-description a {
	font-size: 16px;
	font-weight: bold;
	text-decoration: none;
	color: #334aff;
	padding-bottom: 2px;
	border-bottom: 2px solid #334aff;
	
	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin-footer-logo {
	display: inline-block;
	width: 228px;
	vertical-align: middle;

	@media screen and (max-width: 768px) {
		width: 225px;
	}

	@media screen and (max-width: 480px) {
		width: 210px;
	}
}

/* first steps section */

.tribe-events-admin-step {
	margin: 10px 0 0;
}

.tribe-events-admin-step-card {
	padding: 24px 15px 19px 19px;
	border: 1px solid #e1e1e4;
	border-radius: 20px;
	display: flex;
	justify-content: space-between;
}

.tribe-events-admin-step-card a {
	text-decoration: none;
	color: #334aff;
	padding-bottom: 2px;
    border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin-step-card__icon img {
	width: 42px;
	height: 43px;
	margin-right: 5px;
}

.tribe-events-admin-step-card__content {
	margin-left: 10px;
}

.tribe-events-admin-step__title {
	font-size: 20px;
	font-weight: bold;
	line-height: 1.2;
	color: #0f1031;
	margin-bottom: 10px;
}

.tribe-events-admin-step__answer {
	font-size: 13px;
	color: #0f1031;
	margin-top: 18px;
}

.tribe-events-admin__system-information {
	display: grid;
	grid-template-columns: repeat(2, minmax(0, 1fr));
	grid-template-rows: 1fr;
	gap: 15px 30px;
	grid-template-areas: ". .";
	margin: 100px 0;

	@media screen and (max-width: 768px) {
		grid-template-columns: repeat(1, minmax(0, 1fr));
		grid-template-areas: ".";
		margin: 50px 0;
	}

	@media screen and (max-width: 480px) {
		grid-template-columns: repeat(1, minmax(0, 1fr));
		grid-template-areas: ".";
		margin: 50px 0;
	}
}

.tribe-events-admin__troubleshooting-title {
	font-size: 28px;
	line-height: 1;
	font-weight: bold;
	color: #0f1031;
	margin: 0;
}

.tribe-events-admin__troubleshooting-description {
	font-size: 18px;
	line-height: 1.44;
	color: #0f1031;
	line-height: 1.2;
	margin: 20px 0;
}

.tribe-events-admin__system-information-select {
	margin: 30px 0 20px;
	display: flex;
}

.tribe-events-admin__system-information-select input[type="checkbox"] {
	margin: 0 10px 0 0;
}
/* ... */

